// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Advanced UDF Features > should parse Object attribute in function 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [
        {
          "closeName": undefined,
          "colon": {
            "FullStart": 35,
            "Kind": 205,
            "Leading": [],
            "Length": 1,
            "Start": 35,
            "Text": ":",
            "Trailing": [
              {
                "FullStart": 36,
                "Kind": 601,
                "Leading": [],
                "Length": 1,
                "Start": 36,
                "Text": " ",
                "Trailing": [],
                "Value": undefined,
              },
            ],
            "Value": undefined,
          },
          "end": 42,
          "isAdd": false,
          "isDelete": false,
          "isIncomplete": false,
          "isLocal": false,
          "isReplace": false,
          "kind": 2,
          "name": {
            "end": 34,
            "isIncomplete": false,
            "kind": 3,
            "start": 28,
            "text": "Object",
            "tokens": [
              {
                "FullStart": 24,
                "Kind": 600,
                "Leading": [
                  {
                    "FullStart": 24,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 24,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 6,
                "Start": 28,
                "Text": "Object",
                "Trailing": [
                  {
                    "FullStart": 34,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 34,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Object",
              },
            ],
          },
          "start": 28,
          "value": [
            {
              "end": 42,
              "isIncomplete": false,
              "kind": 3,
              "start": 37,
              "text": "MyObj",
              "tokens": [
                {
                  "FullStart": 37,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 37,
                  "Text": "MyObj",
                  "Trailing": [
                    {
                      "FullStart": 42,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 42,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "MyObj",
                },
              ],
            },
          ],
        },
      ],
      "closeBracket": {
        "FullStart": 22,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 22,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 23,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 23,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 64,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 22,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "WithObject",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 12,
            "Text": "WithObject",
            "Trailing": [],
            "Value": "WithObject",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 55,
            "isIncomplete": false,
            "kind": 3,
            "start": 52,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 52,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 52,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 55,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 55,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 64,
              "kind": 4,
              "start": 58,
              "token": {
                "FullStart": 58,
                "Kind": 604,
                "Leading": [],
                "Length": 6,
                "Start": 58,
                "Text": ""Test"",
                "Trailing": [
                  {
                    "FullStart": 64,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 64,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Test",
              },
              "value": ""Test"",
            },
          ],
          "end": 64,
          "kind": 12,
          "label": {
            "end": 49,
            "isIncomplete": false,
            "kind": 3,
            "start": 47,
            "text": "01",
            "tokens": [
              {
                "FullStart": 43,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 43,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 43,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 47,
                "Text": "01",
                "Trailing": [
                  {
                    "FullStart": 49,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 49,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "01",
              },
            ],
          },
          "start": 47,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 65,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    24,
    43,
    65,
  ],
  "start": 0,
  "text": "
[Function: WithObject]
    Object : MyObj
    01 : Log : "Test"
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 12,
      "Text": "WithObject",
      "Trailing": [],
      "Value": "WithObject",
    },
    {
      "FullStart": 22,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 22,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 23,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 23,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 24,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 24,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 24,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 6,
      "Start": 28,
      "Text": "Object",
      "Trailing": [
        {
          "FullStart": 34,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 34,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Object",
    },
    {
      "FullStart": 35,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 35,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 36,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 36,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 37,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 37,
      "Text": "MyObj",
      "Trailing": [
        {
          "FullStart": 42,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 42,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "MyObj",
    },
    {
      "FullStart": 43,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 43,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 43,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 47,
      "Text": "01",
      "Trailing": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 49,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "01",
    },
    {
      "FullStart": 50,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 50,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 51,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 51,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 52,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 52,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 55,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 55,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 56,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 56,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 57,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 57,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 58,
      "Kind": 604,
      "Leading": [],
      "Length": 6,
      "Start": 58,
      "Text": ""Test"",
      "Trailing": [
        {
          "FullStart": 64,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 64,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Test",
    },
    {
      "FullStart": 65,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 65,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Advanced UDF Features > should parse advanced procedural blocks 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 22,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 22,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 23,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 23,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 141,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 22,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "TestBlocks",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 10,
            "Start": 12,
            "Text": "TestBlocks",
            "Trailing": [],
            "Value": "TestBlocks",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 49,
            "isIncomplete": false,
            "kind": 3,
            "start": 33,
            "text": "START BATCH POST",
            "tokens": [
              {
                "FullStart": 33,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 33,
                "Text": "START",
                "Trailing": [
                  {
                    "FullStart": 38,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 38,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "START",
              },
              {
                "FullStart": 39,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 39,
                "Text": "BATCH",
                "Trailing": [
                  {
                    "FullStart": 44,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 44,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "BATCH",
              },
              {
                "FullStart": 45,
                "Kind": 600,
                "Leading": [],
                "Length": 4,
                "Start": 45,
                "Text": "POST",
                "Trailing": [
                  {
                    "FullStart": 49,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 49,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "POST",
              },
            ],
          },
          "args": [
            {
              "end": 55,
              "kind": 4,
              "start": 52,
              "token": {
                "FullStart": 52,
                "Kind": 603,
                "Leading": [],
                "Length": 3,
                "Start": 52,
                "Text": "100",
                "Trailing": [
                  {
                    "FullStart": 55,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 55,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "100",
              },
              "value": 100,
            },
          ],
          "batchSize": {
            "end": 55,
            "kind": 4,
            "start": 52,
            "token": {
              "FullStart": 52,
              "Kind": 603,
              "Leading": [],
              "Length": 3,
              "Start": 52,
              "Text": "100",
              "Trailing": [
                {
                  "FullStart": 55,
                  "Kind": 6,
                  "Leading": [],
                  "Length": 1,
                  "Start": 55,
                  "Text": "
",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": "100",
            },
            "value": 100,
          },
          "end": 79,
          "endStatement": {
            "action": {
              "end": 79,
              "isIncomplete": false,
              "kind": 3,
              "start": 65,
              "text": "END BATCH POST",
              "tokens": [
                {
                  "FullStart": 65,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 65,
                  "Text": "END",
                  "Trailing": [
                    {
                      "FullStart": 68,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 68,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "END",
                },
                {
                  "FullStart": 69,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 5,
                  "Start": 69,
                  "Text": "BATCH",
                  "Trailing": [
                    {
                      "FullStart": 74,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 74,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "BATCH",
                },
                {
                  "FullStart": 75,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 4,
                  "Start": 75,
                  "Text": "POST",
                  "Trailing": [
                    {
                      "FullStart": 79,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 79,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "POST",
                },
              ],
            },
            "args": [],
            "end": 79,
            "kind": 12,
            "label": {
              "end": 62,
              "isIncomplete": false,
              "kind": 3,
              "start": 60,
              "text": "02",
              "tokens": [
                {
                  "FullStart": 56,
                  "Kind": 603,
                  "Leading": [
                    {
                      "FullStart": 56,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 4,
                      "Start": 56,
                      "Text": "    ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Length": 2,
                  "Start": 60,
                  "Text": "02",
                  "Trailing": [
                    {
                      "FullStart": 62,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 62,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "02",
                },
              ],
            },
            "start": 60,
          },
          "kind": 12,
          "label": {
            "end": 30,
            "isIncomplete": false,
            "kind": 3,
            "start": 28,
            "text": "01",
            "tokens": [
              {
                "FullStart": 24,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 24,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 24,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 28,
                "Text": "01",
                "Trailing": [
                  {
                    "FullStart": 30,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 30,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "01",
              },
            ],
          },
          "start": 28,
          "statements": [],
        },
        {
          "action": {
            "end": 102,
            "isIncomplete": false,
            "kind": 3,
            "start": 89,
            "text": "Start MSG BOX",
            "tokens": [
              {
                "FullStart": 89,
                "Kind": 600,
                "Leading": [],
                "Length": 5,
                "Start": 89,
                "Text": "Start",
                "Trailing": [
                  {
                    "FullStart": 94,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 94,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Start",
              },
              {
                "FullStart": 95,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 95,
                "Text": "MSG",
                "Trailing": [
                  {
                    "FullStart": 98,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 98,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "MSG",
              },
              {
                "FullStart": 99,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 99,
                "Text": "BOX",
                "Trailing": [
                  {
                    "FullStart": 102,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 102,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "BOX",
              },
            ],
          },
          "args": [
            {
              "end": 112,
              "kind": 4,
              "start": 105,
              "token": {
                "FullStart": 105,
                "Kind": 604,
                "Leading": [],
                "Length": 7,
                "Start": 105,
                "Text": ""Title"",
                "Trailing": [
                  {
                    "FullStart": 112,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 112,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Title",
              },
              "value": ""Title"",
            },
            {
              "end": 120,
              "kind": 4,
              "start": 115,
              "token": {
                "FullStart": 115,
                "Kind": 604,
                "Leading": [],
                "Length": 5,
                "Start": 115,
                "Text": ""Msg"",
                "Trailing": [
                  {
                    "FullStart": 120,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 120,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Msg",
              },
              "value": ""Msg"",
            },
          ],
          "end": 141,
          "endStatement": {
            "action": {
              "end": 141,
              "isIncomplete": false,
              "kind": 3,
              "start": 130,
              "text": "End MSG BOX",
              "tokens": [
                {
                  "FullStart": 130,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 130,
                  "Text": "End",
                  "Trailing": [
                    {
                      "FullStart": 133,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 133,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "End",
                },
                {
                  "FullStart": 134,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 134,
                  "Text": "MSG",
                  "Trailing": [
                    {
                      "FullStart": 137,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 137,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "MSG",
                },
                {
                  "FullStart": 138,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 3,
                  "Start": 138,
                  "Text": "BOX",
                  "Trailing": [
                    {
                      "FullStart": 141,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 141,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "BOX",
                },
              ],
            },
            "args": [],
            "end": 141,
            "kind": 12,
            "label": {
              "end": 127,
              "isIncomplete": false,
              "kind": 3,
              "start": 125,
              "text": "04",
              "tokens": [
                {
                  "FullStart": 121,
                  "Kind": 603,
                  "Leading": [
                    {
                      "FullStart": 121,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 4,
                      "Start": 121,
                      "Text": "    ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Length": 2,
                  "Start": 125,
                  "Text": "04",
                  "Trailing": [
                    {
                      "FullStart": 127,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 1,
                      "Start": 127,
                      "Text": " ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "04",
                },
              ],
            },
            "start": 125,
          },
          "kind": 12,
          "label": {
            "end": 86,
            "isIncomplete": false,
            "kind": 3,
            "start": 84,
            "text": "03",
            "tokens": [
              {
                "FullStart": 80,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 80,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 80,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 84,
                "Text": "03",
                "Trailing": [
                  {
                    "FullStart": 86,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 86,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "03",
              },
            ],
          },
          "message": {
            "end": 120,
            "kind": 4,
            "start": 115,
            "token": {
              "FullStart": 115,
              "Kind": 604,
              "Leading": [],
              "Length": 5,
              "Start": 115,
              "Text": ""Msg"",
              "Trailing": [
                {
                  "FullStart": 120,
                  "Kind": 6,
                  "Leading": [],
                  "Length": 1,
                  "Start": 120,
                  "Text": "
",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": "Msg",
            },
            "value": ""Msg"",
          },
          "start": 84,
          "statements": [],
          "title": {
            "end": 112,
            "kind": 4,
            "start": 105,
            "token": {
              "FullStart": 105,
              "Kind": 604,
              "Leading": [],
              "Length": 7,
              "Start": 105,
              "Text": ""Title"",
              "Trailing": [
                {
                  "FullStart": 112,
                  "Kind": 601,
                  "Leading": [],
                  "Length": 1,
                  "Start": 112,
                  "Text": " ",
                  "Trailing": [],
                  "Value": undefined,
                },
              ],
              "Value": "Title",
            },
            "value": ""Title"",
          },
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 142,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    24,
    56,
    80,
    121,
    142,
  ],
  "start": 0,
  "text": "
[Function: TestBlocks]
    01 : START BATCH POST : 100
    02 : END BATCH POST
    03 : Start MSG BOX : "Title" : "Msg"
    04 : End MSG BOX
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 12,
      "Text": "TestBlocks",
      "Trailing": [],
      "Value": "TestBlocks",
    },
    {
      "FullStart": 22,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 22,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 23,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 23,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 24,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 24,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 24,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 28,
      "Text": "01",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "01",
    },
    {
      "FullStart": 31,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 31,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 32,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 32,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 33,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 33,
      "Text": "START",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 38,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "START",
    },
    {
      "FullStart": 39,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 39,
      "Text": "BATCH",
      "Trailing": [
        {
          "FullStart": 44,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 44,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "BATCH",
    },
    {
      "FullStart": 45,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 45,
      "Text": "POST",
      "Trailing": [
        {
          "FullStart": 49,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 49,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "POST",
    },
    {
      "FullStart": 50,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 50,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 51,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 51,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 52,
      "Kind": 603,
      "Leading": [],
      "Length": 3,
      "Start": 52,
      "Text": "100",
      "Trailing": [
        {
          "FullStart": 55,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 55,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "100",
    },
    {
      "FullStart": 56,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 56,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 56,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 60,
      "Text": "02",
      "Trailing": [
        {
          "FullStart": 62,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 62,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "02",
    },
    {
      "FullStart": 63,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 63,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 64,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 64,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 65,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 65,
      "Text": "END",
      "Trailing": [
        {
          "FullStart": 68,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 68,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "END",
    },
    {
      "FullStart": 69,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 69,
      "Text": "BATCH",
      "Trailing": [
        {
          "FullStart": 74,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 74,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "BATCH",
    },
    {
      "FullStart": 75,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 75,
      "Text": "POST",
      "Trailing": [
        {
          "FullStart": 79,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 79,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "POST",
    },
    {
      "FullStart": 80,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 80,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 80,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 84,
      "Text": "03",
      "Trailing": [
        {
          "FullStart": 86,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 86,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "03",
    },
    {
      "FullStart": 87,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 87,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 88,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 88,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 89,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 89,
      "Text": "Start",
      "Trailing": [
        {
          "FullStart": 94,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 94,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Start",
    },
    {
      "FullStart": 95,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 95,
      "Text": "MSG",
      "Trailing": [
        {
          "FullStart": 98,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 98,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "MSG",
    },
    {
      "FullStart": 99,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 99,
      "Text": "BOX",
      "Trailing": [
        {
          "FullStart": 102,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 102,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "BOX",
    },
    {
      "FullStart": 103,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 103,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 104,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 104,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 105,
      "Kind": 604,
      "Leading": [],
      "Length": 7,
      "Start": 105,
      "Text": ""Title"",
      "Trailing": [
        {
          "FullStart": 112,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 112,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Title",
    },
    {
      "FullStart": 113,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 113,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 114,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 114,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 115,
      "Kind": 604,
      "Leading": [],
      "Length": 5,
      "Start": 115,
      "Text": ""Msg"",
      "Trailing": [
        {
          "FullStart": 120,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 120,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Msg",
    },
    {
      "FullStart": 121,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 121,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 121,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 125,
      "Text": "04",
      "Trailing": [
        {
          "FullStart": 127,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 127,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "04",
    },
    {
      "FullStart": 128,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 128,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 129,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 129,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 130,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 130,
      "Text": "End",
      "Trailing": [
        {
          "FullStart": 133,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 133,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "End",
    },
    {
      "FullStart": 134,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 134,
      "Text": "MSG",
      "Trailing": [
        {
          "FullStart": 137,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 137,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "MSG",
    },
    {
      "FullStart": 138,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 138,
      "Text": "BOX",
      "Trailing": [
        {
          "FullStart": 141,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 141,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "BOX",
    },
    {
      "FullStart": 142,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 142,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Advanced UDF Features > should parse complex dotted method references 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 16,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 16,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 17,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 17,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 85,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 16,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "Test",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 4,
            "Start": 12,
            "Text": "Test",
            "Trailing": [],
            "Value": "Test",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 30,
            "isIncomplete": false,
            "kind": 3,
            "start": 27,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 27,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 27,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 30,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 30,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 85,
              "kind": 10,
              "methodName": {
                "end": 85,
                "isIncomplete": false,
                "kind": 3,
                "start": 71,
                "text": "OpeningBalance",
                "tokens": [
                  {
                    "FullStart": 71,
                    "Kind": 600,
                    "Leading": [],
                    "Length": 14,
                    "Start": 71,
                    "Text": "OpeningBalance",
                    "Trailing": [
                      {
                        "FullStart": 85,
                        "Kind": 6,
                        "Leading": [],
                        "Length": 1,
                        "Start": 85,
                        "Text": "
",
                        "Trailing": [],
                        "Value": undefined,
                      },
                    ],
                    "Value": "OpeningBalance",
                  },
                ],
              },
              "pathSpecs": [
                {
                  "collectionName": {
                    "end": 67,
                    "isIncomplete": false,
                    "kind": 3,
                    "start": 52,
                    "text": "BillAllocations",
                    "tokens": [
                      {
                        "FullStart": 52,
                        "Kind": 600,
                        "Leading": [],
                        "Length": 15,
                        "Start": 52,
                        "Text": "BillAllocations",
                        "Trailing": [],
                        "Value": "BillAllocations",
                      },
                    ],
                  },
                  "condition": undefined,
                  "index": {
                    "end": 69,
                    "kind": 4,
                    "start": 68,
                    "token": {
                      "FullStart": 68,
                      "Kind": 603,
                      "Leading": [],
                      "Length": 1,
                      "Start": 68,
                      "Text": "1",
                      "Trailing": [],
                      "Value": "1",
                    },
                    "value": 1,
                  },
                },
              ],
              "primaryObject": {
                "identifier": {
                  "end": 50,
                  "formulaName": {
                    "end": 50,
                    "isIncomplete": false,
                    "kind": 3,
                    "start": 45,
                    "text": "Party",
                    "tokens": [
                      {
                        "FullStart": 45,
                        "Kind": 600,
                        "Leading": [],
                        "Length": 5,
                        "Start": 45,
                        "Text": "Party",
                        "Trailing": [],
                        "Value": "Party",
                      },
                    ],
                  },
                  "isGlobal": true,
                  "kind": 11,
                  "start": 43,
                },
                "type": {
                  "end": 41,
                  "isIncomplete": false,
                  "kind": 3,
                  "start": 35,
                  "text": "Ledger",
                  "tokens": [
                    {
                      "FullStart": 35,
                      "Kind": 600,
                      "Leading": [],
                      "Length": 6,
                      "Start": 35,
                      "Text": "Ledger",
                      "Trailing": [],
                      "Value": "Ledger",
                    },
                  ],
                },
              },
              "start": 33,
            },
          ],
          "end": 85,
          "kind": 12,
          "label": {
            "end": 24,
            "isIncomplete": false,
            "kind": 3,
            "start": 22,
            "text": "01",
            "tokens": [
              {
                "FullStart": 18,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 18,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 18,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 22,
                "Text": "01",
                "Trailing": [
                  {
                    "FullStart": 24,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 24,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "01",
              },
            ],
          },
          "start": 22,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 86,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    18,
    86,
  ],
  "start": 0,
  "text": "
[Function: Test]
    01 : Log : $(Ledger, @@Party).BillAllocations[1].OpeningBalance
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 12,
      "Text": "Test",
      "Trailing": [],
      "Value": "Test",
    },
    {
      "FullStart": 16,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 16,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 17,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 17,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 18,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 18,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 18,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 22,
      "Text": "01",
      "Trailing": [
        {
          "FullStart": 24,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 24,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "01",
    },
    {
      "FullStart": 25,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 25,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 26,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 26,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 27,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 27,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 30,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 30,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 31,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 31,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 32,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 32,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 33,
      "Kind": 203,
      "Leading": [],
      "Length": 1,
      "Start": 33,
      "Text": "$",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 34,
      "Kind": 213,
      "Leading": [],
      "Length": 1,
      "Start": 34,
      "Text": "(",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 35,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 35,
      "Text": "Ledger",
      "Trailing": [],
      "Value": "Ledger",
    },
    {
      "FullStart": 41,
      "Kind": 211,
      "Leading": [],
      "Length": 1,
      "Start": 41,
      "Text": ",",
      "Trailing": [
        {
          "FullStart": 42,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 42,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 43,
      "Kind": 201,
      "Leading": [],
      "Length": 2,
      "Start": 43,
      "Text": "@@",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 45,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 45,
      "Text": "Party",
      "Trailing": [],
      "Value": "Party",
    },
    {
      "FullStart": 50,
      "Kind": 214,
      "Leading": [],
      "Length": 1,
      "Start": 50,
      "Text": ")",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 51,
      "Kind": 212,
      "Leading": [],
      "Length": 1,
      "Start": 51,
      "Text": ".",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 52,
      "Kind": 600,
      "Leading": [],
      "Length": 15,
      "Start": 52,
      "Text": "BillAllocations",
      "Trailing": [],
      "Value": "BillAllocations",
    },
    {
      "FullStart": 67,
      "Kind": 100,
      "Leading": [],
      "Length": 1,
      "Start": 67,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 68,
      "Kind": 603,
      "Leading": [],
      "Length": 1,
      "Start": 68,
      "Text": "1",
      "Trailing": [],
      "Value": "1",
    },
    {
      "FullStart": 69,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 69,
      "Text": "]",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 70,
      "Kind": 212,
      "Leading": [],
      "Length": 1,
      "Start": 70,
      "Text": ".",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 71,
      "Kind": 600,
      "Leading": [],
      "Length": 14,
      "Start": 71,
      "Text": "OpeningBalance",
      "Trailing": [
        {
          "FullStart": 85,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 85,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "OpeningBalance",
    },
    {
      "FullStart": 86,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 86,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Advanced UDF Features > should parse inline directives 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 25,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 25,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 26,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 26,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [
        {
          "end": 58,
          "kind": 19,
          "name": "InUse",
          "rawContent": "InUse: Collection: MyColl",
          "start": 31,
          "targets": [
            {
              "defName": "MyColl",
              "defNameEnd": 57,
              "defNameStart": 51,
              "end": 57,
              "start": 39,
              "typeEnd": 49,
              "typeName": "Collection",
              "typeStart": 39,
            },
          ],
        },
      ],
      "end": 80,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 25,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "WithDirective",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 13,
            "Start": 12,
            "Text": "WithDirective",
            "Trailing": [],
            "Value": "WithDirective",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 71,
            "isIncomplete": false,
            "kind": 3,
            "start": 68,
            "text": "Log",
            "tokens": [
              {
                "FullStart": 68,
                "Kind": 600,
                "Leading": [],
                "Length": 3,
                "Start": 68,
                "Text": "Log",
                "Trailing": [
                  {
                    "FullStart": 71,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 71,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Log",
              },
            ],
          },
          "args": [
            {
              "end": 80,
              "kind": 4,
              "start": 74,
              "token": {
                "FullStart": 74,
                "Kind": 604,
                "Leading": [],
                "Length": 6,
                "Start": 74,
                "Text": ""Test"",
                "Trailing": [
                  {
                    "FullStart": 80,
                    "Kind": 6,
                    "Leading": [],
                    "Length": 1,
                    "Start": 80,
                    "Text": "
",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Test",
              },
              "value": ""Test"",
            },
          ],
          "end": 80,
          "kind": 12,
          "label": {
            "end": 65,
            "isIncomplete": false,
            "kind": 3,
            "start": 63,
            "text": "00",
            "tokens": [
              {
                "FullStart": 59,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 59,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 59,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 63,
                "Text": "00",
                "Trailing": [
                  {
                    "FullStart": 65,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 65,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "00",
              },
            ],
          },
          "start": 63,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 81,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    27,
    59,
    81,
  ],
  "start": 0,
  "text": "
[Function: WithDirective]
    <InUse: Collection: MyColl>
    00 : Log : "Test"
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 13,
      "Start": 12,
      "Text": "WithDirective",
      "Trailing": [],
      "Value": "WithDirective",
    },
    {
      "FullStart": 25,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 25,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 26,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 26,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 27,
      "Kind": 501,
      "Leading": [
        {
          "FullStart": 27,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 27,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 31,
      "Text": "<",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 32,
      "Kind": 600,
      "Leading": [],
      "Length": 5,
      "Start": 32,
      "Text": "InUse",
      "Trailing": [],
      "Value": "InUse",
    },
    {
      "FullStart": 37,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 37,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 38,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 39,
      "Kind": 600,
      "Leading": [],
      "Length": 10,
      "Start": 39,
      "Text": "Collection",
      "Trailing": [],
      "Value": "Collection",
    },
    {
      "FullStart": 49,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 49,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 50,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 50,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 51,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 51,
      "Text": "MyColl",
      "Trailing": [],
      "Value": "MyColl",
    },
    {
      "FullStart": 57,
      "Kind": 502,
      "Leading": [],
      "Length": 1,
      "Start": 57,
      "Text": ">",
      "Trailing": [
        {
          "FullStart": 58,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 58,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 59,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 59,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 59,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 63,
      "Text": "00",
      "Trailing": [
        {
          "FullStart": 65,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 65,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "00",
    },
    {
      "FullStart": 66,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 66,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 67,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 67,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 68,
      "Kind": 600,
      "Leading": [],
      "Length": 3,
      "Start": 68,
      "Text": "Log",
      "Trailing": [
        {
          "FullStart": 71,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 71,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Log",
    },
    {
      "FullStart": 72,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 72,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 73,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 73,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 74,
      "Kind": 604,
      "Leading": [],
      "Length": 6,
      "Start": 74,
      "Text": ""Test"",
      "Trailing": [
        {
          "FullStart": 80,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 80,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Test",
    },
    {
      "FullStart": 81,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 81,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;

exports[`Advanced UDF Features > should parse multi-line statements with + continuation 1`] = `
{
  "comments": [],
  "definitions": [
    {
      "attributes": [],
      "closeBracket": {
        "FullStart": 21,
        "Kind": 101,
        "Leading": [],
        "Length": 1,
        "Start": 21,
        "Text": "]",
        "Trailing": [
          {
            "FullStart": 22,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 22,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "closeType": undefined,
      "colon": {
        "FullStart": 10,
        "Kind": 205,
        "Leading": [],
        "Length": 1,
        "Start": 10,
        "Text": ":",
        "Trailing": [
          {
            "FullStart": 11,
            "Kind": 601,
            "Leading": [],
            "Length": 1,
            "Start": 11,
            "Text": " ",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Value": undefined,
      },
      "complexObjects": [],
      "directives": [],
      "end": 77,
      "isAdd": false,
      "isDelete": false,
      "isIncomplete": false,
      "isLocal": false,
      "isReplace": false,
      "kind": 1,
      "modifier": undefined,
      "name": {
        "end": 21,
        "isIncomplete": false,
        "kind": 3,
        "start": 12,
        "text": "MultiLine",
        "tokens": [
          {
            "FullStart": 12,
            "Kind": 600,
            "Leading": [],
            "Length": 9,
            "Start": 12,
            "Text": "MultiLine",
            "Trailing": [],
            "Value": "MultiLine",
          },
        ],
      },
      "nameCanonical": undefined,
      "openBracket": {
        "FullStart": 0,
        "Kind": 100,
        "Leading": [
          {
            "FullStart": 0,
            "Kind": 6,
            "Leading": [],
            "Length": 1,
            "Start": 0,
            "Text": "
",
            "Trailing": [],
            "Value": undefined,
          },
        ],
        "Length": 1,
        "Start": 1,
        "Text": "[",
        "Trailing": [],
        "Value": undefined,
      },
      "start": 1,
      "statements": [
        {
          "action": {
            "end": 38,
            "isIncomplete": false,
            "kind": 3,
            "start": 32,
            "text": "Action",
            "tokens": [
              {
                "FullStart": 32,
                "Kind": 600,
                "Leading": [],
                "Length": 6,
                "Start": 32,
                "Text": "Action",
                "Trailing": [
                  {
                    "FullStart": 38,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 38,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "Action",
              },
            ],
          },
          "args": [
            {
              "end": 45,
              "isIncomplete": false,
              "kind": 3,
              "start": 41,
              "text": "Arg1",
              "tokens": [
                {
                  "FullStart": 41,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 4,
                  "Start": 41,
                  "Text": "Arg1",
                  "Trailing": [],
                  "Value": "Arg1",
                },
              ],
            },
            {
              "end": 51,
              "isIncomplete": false,
              "kind": 3,
              "start": 47,
              "text": "Arg2",
              "tokens": [
                {
                  "FullStart": 47,
                  "Kind": 600,
                  "Leading": [],
                  "Length": 4,
                  "Start": 47,
                  "Text": "Arg2",
                  "Trailing": [],
                  "Value": "Arg2",
                },
              ],
            },
            {
              "end": 77,
              "isIncomplete": false,
              "kind": 3,
              "start": 73,
              "text": "Arg3",
              "tokens": [
                {
                  "FullStart": 55,
                  "Kind": 600,
                  "Leading": [
                    {
                      "FullStart": 55,
                      "Kind": 601,
                      "Leading": [],
                      "Length": 18,
                      "Start": 55,
                      "Text": "                  ",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Length": 4,
                  "Start": 73,
                  "Text": "Arg3",
                  "Trailing": [
                    {
                      "FullStart": 77,
                      "Kind": 6,
                      "Leading": [],
                      "Length": 1,
                      "Start": 77,
                      "Text": "
",
                      "Trailing": [],
                      "Value": undefined,
                    },
                  ],
                  "Value": "Arg3",
                },
              ],
            },
          ],
          "end": 77,
          "kind": 12,
          "label": {
            "end": 29,
            "isIncomplete": false,
            "kind": 3,
            "start": 27,
            "text": "01",
            "tokens": [
              {
                "FullStart": 23,
                "Kind": 603,
                "Leading": [
                  {
                    "FullStart": 23,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 4,
                    "Start": 23,
                    "Text": "    ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Length": 2,
                "Start": 27,
                "Text": "01",
                "Trailing": [
                  {
                    "FullStart": 29,
                    "Kind": 601,
                    "Leading": [],
                    "Length": 1,
                    "Start": 29,
                    "Text": " ",
                    "Trailing": [],
                    "Value": undefined,
                  },
                ],
                "Value": "01",
              },
            ],
          },
          "start": 27,
        },
      ],
      "type": {
        "end": 10,
        "isIncomplete": false,
        "kind": 3,
        "start": 2,
        "text": "Function",
        "tokens": [
          {
            "FullStart": 2,
            "Kind": 600,
            "Leading": [],
            "Length": 8,
            "Start": 2,
            "Text": "Function",
            "Trailing": [],
            "Value": "Function",
          },
        ],
      },
    },
  ],
  "directives": [],
  "end": 78,
  "errors": [],
  "kind": 0,
  "lineOffsets": [
    0,
    1,
    23,
    55,
    78,
  ],
  "start": 0,
  "text": "
[Function: MultiLine]
    01 : Action : Arg1, Arg2, +
                  Arg3
",
  "tokens": [
    {
      "FullStart": 0,
      "Kind": 100,
      "Leading": [
        {
          "FullStart": 0,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 0,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 1,
      "Start": 1,
      "Text": "[",
      "Trailing": [],
      "Value": undefined,
    },
    {
      "FullStart": 2,
      "Kind": 600,
      "Leading": [],
      "Length": 8,
      "Start": 2,
      "Text": "Function",
      "Trailing": [],
      "Value": "Function",
    },
    {
      "FullStart": 10,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 10,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 11,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 11,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 12,
      "Kind": 600,
      "Leading": [],
      "Length": 9,
      "Start": 12,
      "Text": "MultiLine",
      "Trailing": [],
      "Value": "MultiLine",
    },
    {
      "FullStart": 21,
      "Kind": 101,
      "Leading": [],
      "Length": 1,
      "Start": 21,
      "Text": "]",
      "Trailing": [
        {
          "FullStart": 22,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 22,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 23,
      "Kind": 603,
      "Leading": [
        {
          "FullStart": 23,
          "Kind": 601,
          "Leading": [],
          "Length": 4,
          "Start": 23,
          "Text": "    ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 2,
      "Start": 27,
      "Text": "01",
      "Trailing": [
        {
          "FullStart": 29,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 29,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "01",
    },
    {
      "FullStart": 30,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 30,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 31,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 31,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 32,
      "Kind": 600,
      "Leading": [],
      "Length": 6,
      "Start": 32,
      "Text": "Action",
      "Trailing": [
        {
          "FullStart": 38,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 38,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Action",
    },
    {
      "FullStart": 39,
      "Kind": 205,
      "Leading": [],
      "Length": 1,
      "Start": 39,
      "Text": ":",
      "Trailing": [
        {
          "FullStart": 40,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 40,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 41,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 41,
      "Text": "Arg1",
      "Trailing": [],
      "Value": "Arg1",
    },
    {
      "FullStart": 45,
      "Kind": 211,
      "Leading": [],
      "Length": 1,
      "Start": 45,
      "Text": ",",
      "Trailing": [
        {
          "FullStart": 46,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 46,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 47,
      "Kind": 600,
      "Leading": [],
      "Length": 4,
      "Start": 47,
      "Text": "Arg2",
      "Trailing": [],
      "Value": "Arg2",
    },
    {
      "FullStart": 51,
      "Kind": 211,
      "Leading": [],
      "Length": 1,
      "Start": 51,
      "Text": ",",
      "Trailing": [
        {
          "FullStart": 52,
          "Kind": 601,
          "Leading": [],
          "Length": 1,
          "Start": 52,
          "Text": " ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 53,
      "Kind": 210,
      "Leading": [],
      "Length": 1,
      "Start": 53,
      "Text": "+",
      "Trailing": [
        {
          "FullStart": 54,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 54,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": undefined,
    },
    {
      "FullStart": 55,
      "Kind": 600,
      "Leading": [
        {
          "FullStart": 55,
          "Kind": 601,
          "Leading": [],
          "Length": 18,
          "Start": 55,
          "Text": "                  ",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Length": 4,
      "Start": 73,
      "Text": "Arg3",
      "Trailing": [
        {
          "FullStart": 77,
          "Kind": 6,
          "Leading": [],
          "Length": 1,
          "Start": 77,
          "Text": "
",
          "Trailing": [],
          "Value": undefined,
        },
      ],
      "Value": "Arg3",
    },
    {
      "FullStart": 78,
      "Kind": 1,
      "Leading": [],
      "Length": 0,
      "Start": 78,
      "Text": "",
      "Trailing": [],
      "Value": undefined,
    },
  ],
}
`;
